--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,11 @@
             <artifactId>jfoenix</artifactId>
             <version>9.0.1</version>
         </dependency>
-
+    <dependency>
+                <groupId>org.hibernate.validator</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>6.0.16.Final</version>
+            </dependency>
 
     </dependencies>
 
