--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <version>0.3.10</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/jasperreports/jasperreports -->
+        <dependency>
+            <groupId>jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>3.5.3</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
